2011-10-31  Filip Pizlo  <fpizlo@apple.com>

        DFG OSR exits should add to value profiles
        https://bugs.webkit.org/show_bug.cgi?id=71202

        Reviewed by Oliver Hunt.
        
        Value profiles now have an extra special slot not used by the old JIT's
        profiling, which is reserved for OSR exits.
        
        The DFG's OSR exit code now knows which register, node index, and value
        profiling site was responsible for the (possibly flawed) information that
        led to the OSR failure. This is somewhat opportunistic and imperfect;
        if there's a lot of control flow between the value profiling site and the
        OSR failure point, then this mechanism simply gives up. It also gives up
        if the OSR failure is caused by either known deficiencies in the DFG
        (like that we always assume that the index in a strict charCodeAt access
        is within bounds) or where the OSR failure would be catalogues and
        profiled through other means (like slow case counters).
        
        This patch also adds the notion of a JSValueRegs, which is either a
        single register in JSVALUE64 or a pair in JSVALUE32_64. We should
        probably move the 32_64 DFG towards using this, since it often makes it
        easier to share code between 64 and 32_64.
        
        Also fixed a number of pathologies that this uncovered. op_method_check 
        didn't have a value profiling site on the slow path. GetById should not
        always force OSR exit if it never executed in the old JIT; we may be
        able to infer its type if it's a array or string length get. Finally,
        these changes benefit from a slight tweak to optimization delay
        heuristics (profile fullness is now 0.35 instead of 0.25).
        
        3.8% speed-up on Kraken, mostly due to ~35% on both stanford-crypto-aes
        and imaging-darkroom.

        * bytecode/ValueProfile.cpp:
        (JSC::ValueProfile::computeStatistics):